<resources>
    <string name="app_name">Arifin</string>
    <string name="universitas_hamzanwadi">UNIVERSITAS HAMZANWADI</string>
    <string name="wisata_air_terjun">wisata air terjun</string>
    <string name="wisata_pantai">wisata pantai</string>
    <string name="wisata_pegunungan">wisata pegunungan</string>
    <string name="wisata_religi">wisata religi</string>
    <string name="daftar_ras_hewan">Daftar Ras Hewan</string>
    <string name="wisata_judul">wisata</string>
    <string name="jenis_wisata">Jenis Wisata</string>
    <string name="asal">Asal</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="kembali">kembali</string>
    <string name="jenis_row">Jenis</string>
    <string name="asal_row">Asal</string>
    <string name="nama_airterjun">Keindahan dua tingkat di Sendang Gile</string>
    <string name="lokasi">Desa senaru</string>
    <string name="airterjun">berada di Desa Senaru yang terkenal, kamu harus berjalan menyusuri hutan dan sungai untuk bisa mencapai Sendang Gile. Tapi tenang saja, perjalanannya akan seru dan menyenangkan karena suasana sejuk pegunungan yang akan kamu nikmati</string>
    <string name="nama">Si Kembar dan Si Tinggi; Tiu Teja dan Tiu Sekeper</string>
    <string name="santong">Desa Santong, Kecamatan Kayangan, Kabupaten Lombok Utara.</string>
    <string name="desc2air">Teja dalam bahasa setempat berarti pelangi. Kamu bisa menemukan pelangi ini di bagian bawah air terjun saat sinar matahari bisa mencapainya. Tiu Teja juga merupakan air terjun kembar dengan dua aliran yang jatuh berdampingan. Alirannya cukup deras, airnya jernih dan sangat dingin.</string>
    <string name="nama3">Kemegahan ampitheater alam di Tiu Kelep</string>
    <string name="lokasi3">Desa Sena ru, Kecamatan Bayan, Kabupaten Lombok Utara.</string>
    <string name="desc3">Jadi, pada dasarnya air terjun ini memiliki dua tingkat. Air terjun utama dengan aliran terbesar jatuh langsung dari tingkat tertinggi. Sementara itu, tingkat bawahnya adalah sederet aliran yang lebih kecil di tebing. Semuanya jatuh ke kolam yang sama.</string>
    <string name="nama4">Segar manisnya Air Terjun Jeruk Manis</string>
    <string name="lokasi4">Desa Kembang Kuning, Kecamatan Sikur, Kabupaten Lombok Timur</string>
    <string name="desc4">Masih di kaki Gunung Rinjani, Air Terjun Jeruk Manis berada di sisi timur lereng gunung berapi ini. Air terjun ini memang masih menjadi bagian dari Taman Nasional Gunung Rinjani. Konon, air terjun ini pertama kali ditemukan masyarakat sekitar pada pertengahan dekade 80-an.</string>
    <string name="nama5">Kolam biru Air Terjun Umar Maya</string>
    <string name="lok5">Desa Bilok Petung, Kecamatan Sembalun, Kabupaten Lombok Timur.</string>
    <string name="desc5">Air terjun itu mengalir ke sebuah kolam alami yang luas. Warna airnya bervariasi, dari hijau toska hingga biru langit. Kolam ini seakan terpahat di bebatuan raksasa, membuat kamu akan ingat tentang legenda bidadari yang turun ke bumi.</string>
    <string name="nama6">Eksotisme Tanjung Bloam yang masih alami</string>
    <string name="lok6">Jl. Pantai Beloam, Tanjung Ringgit, Jerowaru, Sekaroh, Lombok Timur.</string>
    <string name="desc6">Lombok Timur punya banyak pantai indah, terutama di bagian tenggara. Meski belakangan banyak dilakukan pembangunan jalan, akses ke sebagian pantai di wilayah ini masih sangat sulit. Salah satu pantai yang wajib dikunjungi jika ke Lombok Timur adalah Tanjung Bloam (kadang juga disebut Tanjung Beloam).</string>
    <string name="nama7">Gili Kondo, pulau pasir nan menawan</string>
    <string name="loc7">Labuhan Pandan, Sambelia. Lombok Timur:</string>
    <string name="desc7">Gili Kondo adalah satu dari gugusan pulau kecil yang berada di Selat Alas. Artinya, pulau-pulau itu berada di antara Lombok dan Sumbawa. Seperti kebanyakan pulau kecil di sekitar Lombok, Gili Kondo juga sangat eksotis</string>
    <string name="name8">Tanjung Ringgit, keindahan yang belum tersentuh</string>
    <string name="loc8">Jl. Lingkok Siwaq, Sekaroh, Jerowaru, Kabupaten Lombok Timur</string>
    <string name="desc8">\"Berada di sudut tenggara Lombok, Tanjung Ringgit adalah pantai yang sangat unik. Kamu bisa menemukan berbagai keindahan yang berbeda di sini. Yang pertama ada tebing tinggi yang bertabrakan langsung dengan laut biru \"</string>
    <string name="name9">Pasir merah muda menyala di Pantai Tangsi</string>
    <string name="loc9">Desa Sekaroh, Kecamatan Jerowaru, Kabupaten Lombok Timur</string>
    <string name="desc9">Tak banyak pantai di dunia ini yang memiliki pasir berwarna merah muda alias pink, tapi Indonesia punya beberapa, salah satunya ada di Lombok. Pantai Tangsi yang berada di Jerowaru memiliki warna alami merah muda yang memukau. Warna ini bisa tercipta karena perpaduan antara pasir putih dengan serpihan karang merah yang sudah mati. Di sini, kamu bisa melihat gradasi warna yang tiada duanya. Dimulai dari pasir putih, merah muda, menuju air laut toska, hingga biru gelap di kedalaman.</string>
    <string name="name10">\" Menyeberang ke savana Gili Sunut\"</string>
    <string name="loc10">Dusun Temeak, Desa Pemongkong, Kecamatan Jerowaru, Kabupaten Lombok Timur</string>
    <string name="desc10">Masih berada di Sekaroh, Jerowaru, kamu juga bisa menemukan sebuah pulau yang sangat unik; Gili Sunut. Keunikan pertama gili ini adalah aksesnya yang ‘fleksibel’</string>
    <string name="name11">\" Bukit Pergasingan\"</string>
    <string name="loc11">sembalum lombok timur</string>
    <string name="desc11">Pemandangan menakjubkan Lombok dan Rinjani dari ketinggian: Bukit Pergasingan</string>
    <string name="loc12">\"kampung Gumise, Gerung, Lombok Barat  \"</string>
    <string name="desc12">Untuk mencapai bukit ini, kita membutuhkan waktu satu jam perjalanan dari kota Mataram. Terletak di kampung Gumise, Gerung, Lombok Barat membuat pengunjung bukit ini kebanyakan dari wilayah Lombok Barat dan Kota Mataram</string>
    <string name="name13">Bukit Pengawisan</string>
    <string name="loc13">Desa Tawun, Kecamatan Sekotong, Lombok Barat</string>
    <string name="desc13">\"Terletak di Desa Tawun, Kecamatan Sekotong, Lombok Barat, Bukit Pengawisan dapat ditempuh dengan kendaraan bermotor untuk mencapai puncaknya. Dari atas bukit anda dapat melihat pesisir pantai wilayah Sekotong dan beberapa pulau-pulau kecil. \"</string>
    <string name="name14">Bukit Anak Dara</string>
    <string name="loc14">\" Desa Sembalun\"</string>
    <string name="desc14">Terletak di Desa Sembalun juga, Bukit Anak Dara lebih tinggi daripada Bukit Pergasingan. Jika naik ke Bukit Pergasingan menempuh waktu selama 2 jam, Bukit Anak Dara bisa mencapai 3 jam.</string>
    <string name="name15">Bukit Nanggi</string>
    <string name="loc15">Desa sembalun</string>
    <string name="desc15">Bukit Nanggi juga terletak di Desa Sembalun, Kabupaten Lombok Timur. Dibandingkan dengan Bukit Pergasingan dan Bukit Anak Dara, Bukit Nanggi menjadi bukit tertinggi di deretan bukit di Lombok pada artikel ini. Untuk mencapai puncak Bukit Nanggi, anda harus berjalan kaki soft trekking selama sekitar 4 jam</string>
    <string name="nmae16">1. Makam yang Ada Di Masjid Kuno Bayan Baleq</string>
    <string name="loc16">Desa Bayan, Kecamatan Bayan, Kabupaten Lombok Utara</string>
    <string name="desc16">Masjid yang ada di Bayan ini merupakan salah satu bangunan yang menjadi saksi bisu akan perkembangan Islam di tanah Lombok. Di Masjid Kuno Bayan Balek ini terdapat sejumlah makam yang salah satu diantaranya adalah makam Abdul Rozak yang dianggap sebagai orang yang menyebarkan agama islam di Lombok.</string>
    <string name="name17">\" Makam yang Ada Di Wali Nyatoq \"</string>
    <string name="loc17">\" Lombok Barat. \"</string>
    <string name="desc17">Menurut pendapat dari masyarakat setempat, Wali Nyatoq adalah salah satu wali yang namanya sudah melegenda di kawasan Lombok Barat. Kawasan pemakaman Wali Nyatoq ini tiap harinya ramai dikunjungi oleh para peziarah, khususnya pada hari Rabu. Keberadaan makam Wali Nyatoq ini dipercaya dapat menyelesaikan beragam permasalahan rakyat.</string>
    <string name="name18">\" Makam Muhammad Zaiduddin Abdul Madjid dan Makam Almagfurlah\"</string>
    <string name="loc18">pancor,selong lombok timur</string>
    <string name="desc18">\"Muhamad Zaiduddin A.M dan Almagfurlah dulunya adalah tokoh ulama yang menyebarkan agama islam di tanah Lombok ini. Tak hanya itu saja, kedua tokoh ini merupakan orang yang pemberani karena mereka tetap memperjuangkan penyebaran agama islam di tengah carut-marutnya negara Indonesia karena penjajahan Jepang. \"</string>
    <string name="name19">Mengenal Sejarah Kerajaan Selaparang Di Makam Selaparang</string>
    <string name="loc19">Kecamatan Suwela, Kabupaten Lombok Timur,</string>
    <string name="desc19">Sesuai dengan namanya, keberadaan makam Selaparang sangat erat hubungannya dengan Kerajaan Selaparang. Kerajaan Selaparang merupakan salah satu kerajaan Hindu yang ada di Indonesia, yang kejayaannya dimulai dari abad ke 13 hingga ke 16.</string>
    <string name="name20">Berziarah Ke Makam Loang Baloq Lombok</string>
    <string name="loc20">mataram</string>
    <string name="desc20">Dalam bahasa Sasak, kata Loang Baloq mempunyai arti berupa pohon beringin yang berlubang. Hal ini disebabkan karena di kawasan pemakaman Loang Baloq ini terdapat pohon beringin yang sudah berumur ratusan tahun</string>
    <string name="pegunungan">Pegunungan</string>
    <string name="pantai">Pantai</string>
    <string name="religi">Relegi</string>
    <string name="air">Air Terjun</string>
    <string name="pgn">Pegunungan</string>
    <string name="pti">Pantai</string>
    <string name="rlg">Relegi</string>
    <string name="terjun">Air terjun</string>
    <string name="name1_2">Bukit Batu Idung</string>
    <string name="nama1">Nama</string>
    <string name="nim">NIM</string>
    <string name="prodi">Prodi</string>
    <string name="kelas">Kelas</string>
    <string name="hobi">Hobi</string>
    <string name="teknik_informatika">Teknik Informatika</string>
    <string name="teknik_informatika_b">Teknik Informatika-B</string>
    <string name="programming">Programming</string>
</resources>