<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/pan4"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:src="@drawable/ipin"
            android:scaleType="fitXY"
            android:layout_marginBottom="19dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/universitas_hamzanwadi"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="24dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama1"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nim"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prodi"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/kelas"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hobi"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=":"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Muhammad Arifin"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="200602051"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teknik_informatika"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/teknik_informatika_b"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/programming"
                    android:textColor="@color/black"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>